# monday-client

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  COPYING  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: Makefile  TESTING.md  conf.py  doc8.ini  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: boards.rst  colors.rst  conf.py  configuration.rst  exceptions.rst  fields.rst  groups.rst  http_adapters.rst  index.rst  items.rst  modules.rst  monday.rst  monday.services.rst  monday.services.schemas.boards.rst  monday.services.schemas.items.rst  monday.services.schemas.rst  monday.services.utils.rst  monday_client.rst  mondayclient.rst  query_types.rst  readme.rst  return_types.rst  services.rst  sync.rst  types.rst  usage.rst  users.rst  utils.rst  webhooks.rst
docs/source/_static/: custom.js
monday/: __init__.py  client.py  exceptions.py
monday/fields/: __init__.py
monday/services/: __init__.py  boards.py  groups.py  items.py  subitems.py  users.py
monday/types/: __init__.py
monday_client/: monday.py
tests/: conftest.py  test_boards.py  test_fields.py  test_groups.py  test_items.py  test_monday_client.py  test_users.py
tests/integrations/: config.example.yml  test_board_integrations.py  test_column_inputs_integrations.py  test_item_integrations.py  test_webhooks_integrations.py
(+34 files in other folders)
